TestCases/ASTTests/SemanticErrorsTests/createTests/read_file.c
float foo(){

}

char bar(){

}

int main(){
    return 0;
}